# quantalpha

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  ai_news_analyst.py  llama_test.py  news_test.py  package-lock.json  package.json  pyproject.toml
app/: layout.tsx  page.tsx
app/api/ai-chat-python/: route.ts
app/api/chat/: route.ts
app/api/chat-python/: route.ts
app/api/portfolio-analysis/: route.ts
app/api/python-portfolio/: route.ts
app/api/test-groq/: route.ts
app/dashboard/: page.tsx
app/risk-profile/: page.tsx
components/: ai-portfolio-insights.tsx  groq-test-panel.tsx  scenario-analysis.tsx
scripts/: __init__.py  ai_portfolio_advisor.py  portfolio_manager.py  requirements.txt  risk_profiler.py  scenario_analysis.py  test_groq_connection.py
